Refactored auth and upload functions into their own folders/files. Added name title to title form in htmtl. Added ajax functions in auth api for change pw

--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
   <br>
 <!-- IMAGE UPLOAD FORM -->
   <form id='upload-form' enctype="multipart/form-data">
-    <input name='image' type="file" />
-    <input type="text" placeholder="Title">
+    <input name="image" type="file" />
+    <input name="title" type="text" placeholder="Title">
     <input type="submit" />
   </form>
+
   <div id='display-image'></div>
+
 </body>
 
 </html>
