Add delete feature
-add event listener in assets/scripts/app.js
-add a delete form in index.html
-add associated code in the app, api, and ui files in the uploads folder

--- a/index.html
+++ b/index.html
@@ -139,14 +139,12 @@
     <input name="title" type="text" placeholder="Title">
     <input type="submit" />
   </form>
-
-  <h3>Delete Purchase by ID#</h3>
+  <h3>Delete Upload</h3>
   <form id='delete-upload'>
     <input class='form' name="upload[id]" type="text" placeholder='Upload ID#' required>
     <br>
     <button class='form-button' type="submit">Submit</button>
   </form>
-
   <div id='display-image'></div>
 
 </body>
