--- a/index.html
+++ b/index.html
@@ -139,6 +139,17 @@
     <input name="title" type="text" placeholder="Title">
     <input type="submit" />
   </form>
+
+  <h3>Update Upload</h3>
+  <form id='update-upload'>
+    <input class='form' name="update[id]" type="text" placeholder='Upload ID#' required>
+    <br>
+    <input class='form' name="update[title]" type="text" placeholder='Updated Title' required>
+    <input class='form' name="update[tag]" type="text" placeholder='Updated Tag' required>
+    <br>
+    <button class='form-button' type="submit">Submit</button>
+  </form>
+
   <h3>Delete Upload</h3>
   <form id='delete-upload'>
     <input class='form' name="upload[id]" type="text" placeholder='Upload ID#' required>
