Add tag input in create upload field in index.html
-Add tag input
-Edit title input so that it is required

--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
   Create Upload
   <form id='upload-form' enctype="multipart/form-data">
     <input name="image" type="file" />
-    <input name="title" type="text" placeholder="Title">
+    <input name="title" type="text" placeholder="Title" required>
+    <input name="tag" type="text" placeholder="Tag">
     <input type="submit" />
   </form>
 
