Add features to view all uploads and user uploads
-Add new button in index.html to view only user owned uploads
-Add new event listener in app
-Create new get-all-uploads.handlebars file to display all uploads
-Add appropriate code in api, events, and ui files

--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
     <button class='form-button' type="submit">Submit</button>
   </form>
   <div id='display-image'></div>
+  <button id='mystuff'>mystuff</button>
 
 </body>
 
