event handler for create upload was lost in a commit somewhere. Added it back in and all is well now

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   <!-- IMAGE UPLOAD FORM -->
   Create Upload
   <form id='upload-form' enctype="multipart/form-data">
-    <input name="image" type="file" />
+    <input name="image" type="file">
     <input name="title" type="text" placeholder="Title" required>
     <select name="tag">
       <option value="" disabled selected>Select Tag</option>
@@ -134,10 +134,10 @@
       <option value="Tech">Tech</option>
       <option value="Miscellaneous">Miscellaneous</option>
     </select>
-    <input type="submit" />
+    <input type="submit">
   </form>
 </div>
-
+<div id="user-message"></div>
 <div class="card-deck" id="upload-cards"></div>
 </body>
 
