Removed console.logs

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
               <!-- footer -->
               <hr class="my-4">
                 <div class="btn-group d-flex justify-content-center" role="group">
-                  <button type="button" id="toggle-sign-up-btn" class="btn btn-secondary">Sign Up</button>
-                  <button type="button" id="toggle-sign-in-btn" class="btn btn-secondary">Log In</button>
+                  <button type="button" id="toggle-sign-up-btn" class="btn btn-outline-secondary">Sign Up</button>
+                  <button type="button" id="toggle-sign-in-btn" class="btn btn-outline-secondary">Log In</button>
                 </div>
               </div>
             </div>
